fix deps problems, pyproject updated, gitignore updated

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 # Saved models
 /saved*
 *.pth
-
 .vscode/
 .idea/
 *.pyc
@@ -13,3 +12,8 @@ saved/
 docs/build/
 wandb/*
 /ray_log*
+.venv/
+venv/
+.DS_Store
+config/
+testingModules.py
