--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,36 +28,18 @@ keywords = [
 ]
 dependencies = [
     "torch>=1.10.0",
-    "torchdata",
-    "transformers",
-    "pydantic",
-    "datasets",
-    "community",
     "numpy==1.23.5",
     "pandas>=1.3.0",
     "tqdm",
-    "xgboost",
     "wandb",
-    "igraph",
-    "colorlog>=4.7.2",
     "colorama>=0.4.4",
     "scipy==1.12.0",
-    "protobuf==3.19.0",
-    "hyperopt==0.2.5",
-    "faiss-cpu",
-    "lightgbm",
-    "plotly",
     "thop",
-    "pytest",
-    "python-louvain",
     "ray==2.6.3",
-    "hyperopt==0.2.5",
     "tabulate",
     "tensorboard>=2.5.0",
-    "dgl==0.9.1",
     "psutil",
     "texttable",
-    "kmeans-pytorch",
     "scikit_learn>=0.23.2"
 ]
 classifiers = [
@@ -74,6 +56,31 @@ classifiers = [
   "Topic :: Software Development :: Libraries :: Python Modules",
 ]
 
+[project.optional-dependencies]
+dev = [
+  "transformers",
+  "pydantic",
+  "datasets",
+  "community",
+  "xgboost",
+  "igraph",
+  "colorlog>=4.7.2",
+  "protobuf==3.19.0",
+  "faiss-cpu",
+  "lightgbm",
+  "plotly",
+  "python-louvain",
+  "hyperopt==0.2.5",
+  "dgl==0.9.1",
+  "kmeans-pytorch",
+]
+docs = [
+  "sphinx"
+]
+test = [
+  "pytest",
+  "pre-commit"
+]
 
 [tool.ruff]
 line-length = 119
