--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,14 +28,14 @@ keywords = [
 ]
 dependencies = [
     "torch>=1.10.0",
-    "numpy",
+    "numpy==1.23.5",
     "pandas>=1.3.0",
     "transformers",  # it will be used by language path modeling
     "tqdm",
     "wandb",
     "igraph",  # it will be used for random walk path sampling
     "colorama>=0.4.4",
-    "scipy>=1.12.0",
+    "scipy==1.12.0",
     "thop",
     "tabulate",
     "tensorboard>=2.5.0",
@@ -114,6 +114,8 @@ fixable = ["ALL"]
 "__init__.py" = ["F401", "F403", "F405"]
 "**/{tests,docs,run_example}/*" = ["D", "PLR2004"]
 "**/{significance_test.py,run_hyper.py}" = ["D", "PLR2004"]
+"**/hopwise/evaluator/__init__.py" = ["I"]
+"**/hopwise/data/dataset/__init__.py" = ["I"]
 
 [tool.ruff.format]
 quote-style = "double"
