--- a/hopwise/properties/quick_start_config/knowledge_path_base.yaml
+++ b/hopwise/properties/quick_start_config/knowledge_path_base.yaml
@@ -11,17 +11,28 @@ kg_reverse_r: False                     # (bool) Whether to reverse relations of
 entity_kg_num_interval: "[0,inf)"       # (str) Entity interval for filtering kg.
 relation_kg_num_interval: "[0,inf)"     # (str) Relation interval for filtering kg.
 
-# path_hop_length: 3              # (int) Number of hops in the knowledge path.
-# MAX_PATHS_PER_USER: 250         # (int) Maximum number of kg sampled paths per user.
-# metapaths: ~                    # (list) Metapaths used to sample paths.
-# path_sample_args:
-#     temporal_causality: False   # (bool) Whether to use temporal causality.
-#     collaborative_path: True    # (bool) Whether to include users in sampled paths.
-#     strategy: constrained-rw    # (str) Strategy for sampling paths.
-#     reasoning_template: "{user} {pos_iid} {entity_list} {rec_iid}"  # (str) Template used to format reasoning pahts.
-#     restrict_by_phase: True     # (bool) Whether to restrict the last item in the reasoning path by the used ids in the dataloader phase.
-#     MAX_CONSECUTIVE_INVALID: 10 # (int) Maximum number of consecutive invalid paths per user.
-#     MAX_RW_TRIES_PER_IID: 50    # (int) Maximum number of tries per positive item.
-#     MAX_RW_PATHS_PER_HOP: 1     # (int) Maximum number of paths sampled at each hop for constrained random walk.
-# tokenizer:                                  # (dict) Tokenizer parameters.
-#     model: WordLevel                        # (str) Tokenizer model.
+path_hop_length: 3              # (int) Number of hops in the knowledge path.
+MAX_PATHS_PER_USER: 250         # (int) Maximum number of kg sampled paths per user.
+metapaths: ~                    # (list) Metapaths used to sample paths.
+path_sample_args:
+    temporal_causality: False   # (bool) Whether to use temporal causality.
+    collaborative_path: True    # (bool) Whether to include users in sampled paths.
+    strategy: constrained-rw    # (str) Strategy for sampling paths.
+    reasoning_template: "{user} {pos_iid} {entity_list} {rec_iid}"  # (str) Template used to format reasoning pahts.
+    restrict_by_phase: True     # (bool) Whether to restrict the last item in the reasoning path by the used ids in the dataloader phase.
+    MAX_CONSECUTIVE_INVALID: 10 # (int) Maximum number of consecutive invalid paths per user.
+    MAX_RW_TRIES_PER_IID: 50    # (int) Maximum number of tries per positive item.
+    MAX_RW_PATHS_PER_HOP: 1     # (int) Maximum number of paths sampled at each hop for constrained random walk.
+tokenizer:                                  # (dict) Tokenizer parameters.
+    model: WordLevel                        # (str) Tokenizer model.
+    template: "{bos_token}:0 $A:0 {eos_token}"                # (str) Template for the tokenizer.
+path_generation_args:
+    paths_per_user: 10          # (int) Number of paths generated per user.
+    language_model:
+        num_beams: 20           # (int) Number of beams for beam search.
+        num_beam_groups: 5      # (int) Number of groups for diverse beam search.
+        diversity_penalty: 0.3  # (float) Diversity penalty for beam search.
+        length_penalty: 0.0     # (float) Length penalty for beam search.
+        top_k: ~                # (int) The number of highest probability vocabulary tokens to keep for top-k-filtering.
+        top_p: ~                # (float) The cumulative probability for top-p-filtering.
+        do_sample: False        # (bool) Whether to use sampling ; use greedy decoding otherwise.
