--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "numpy==1.23.5",
     "pandas>=1.3.0",
     "transformers",  # it will be used by language path modeling
+    "accelerate>=0.34.2",
     "tqdm",
     "wandb",
     "igraph",  # it will be used for random walk path sampling
