--- a/hopwise/properties/quick_start_config/knowledge_base.yaml
+++ b/hopwise/properties/quick_start_config/knowledge_base.yaml
@@ -8,3 +8,8 @@ ui_relation: "[UI-Relation]"            # (str) Name assigned to the interaction
 kg_reverse_r: False                     # (bool) Whether to reverse relations of triples for bidirectional edges.
 entity_kg_num_interval: "[0,inf)"       # (str) Entity interval for filtering kg.
 relation_kg_num_interval: "[0,inf)"     # (str) Relation interval for filtering kg.
+
+# Knowledge Graph split args
+eval_lp_args:                           # (dict) 4 keys: group_by, order, split, and mode
+  knowledge_split:                      # (dict) The splitting strategy ranging in ['RS','LS'].
+  knowledge_group_by:                   # (str) The grouping strategy ranging in ['head', 'relation', 'tail', 'none'].
