Added uv sync workflow

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,7 @@ dependencies = [
     "datasets",
     "colorlog>=4.7.2",
     "protobuf==3.19.0",
-    "dgl>=2.1.0",
+    "dgl~=2.1.0",
 ]
 classifiers = [
   "Intended Audience :: Developers",
