Testing workflow edits and changed Recbole to hopwise from docstring

--- a/.github/workflows/uv_sync.yml
+++ b/.github/workflows/uv_sync.yml
@@ -27,6 +27,7 @@ jobs:
 
       - name: Install the project
         run: uv sync --all-extras --dev
+        timeout-minutes: 10
 
       - name: Run Hopwise
         run: |
