--- a/.github/workflows/uv_sync.yml
+++ b/.github/workflows/uv_sync.yml
@@ -19,8 +19,10 @@ jobs:
           - "3.11"
         experimental: [false]
         include:
-          - version: "3.12"
-            experimental: true
+          - experimental: true
+          - python-version: "3.7"
+          - python-version: "3.8"
+          - python-version: "3.12"
 
     steps:
       - uses: actions/checkout@v4
