--- a/.github/workflows/uv_sync.yml
+++ b/.github/workflows/uv_sync.yml
@@ -19,10 +19,12 @@ jobs:
           - "3.11"
         experimental: [false]
         include:
-          - experimental: true
           - python-version: "3.7"
+            experimental: true
           - python-version: "3.8"
+            experimental: true
           - python-version: "3.12"
+            experimental: true
 
     steps:
       - uses: actions/checkout@v4
@@ -38,3 +40,4 @@ jobs:
       - name: Run Hopwise
         run: |
           uv run run_hopwise.py --epochs=2
+          uv run run_hopwise.py --model=KGAT --epochs=2
