--- a/.github/workflows/uv_sync.yml
+++ b/.github/workflows/uv_sync.yml
@@ -19,7 +19,7 @@ jobs:
           - "3.11"
         experimental: [false]
         include:
-          - version: "3.12"
+          - python-version: "3.12"
             experimental: true
 
     steps:
@@ -36,3 +36,4 @@ jobs:
       - name: Run Hopwise
         run: |
           uv run run_hopwise.py --epochs=2
+          uv run run_hopwise.py --model=KGAT --epochs=2
