--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,8 +30,20 @@ keywords = [
   "path modeling",
   "explainability"
 ]
+classifiers = [
+  "Intended Audience :: Developers",
+  "Operating System :: OS Independent",
+  "Programming Language :: Python",
+  "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
+  "Programming Language :: Python :: 3.13",
+  "Programming Language :: Python :: 3 :: Only",
+  "Topic :: Software Development :: Libraries :: Python Modules",
+]
 dependencies = [
-    "torch>=1.10.0",
+    "torch>=2.4.0",
     "numpy==1.23.5",
     "pandas>=1.3.0",
     "transformers",  # it will be used by language path modeling
@@ -49,20 +61,7 @@ dependencies = [
     "datasets",
     "colorlog>=4.7.2",
     "protobuf==3.19.0",
-    "dgl~=2.1.0",
-]
-classifiers = [
-  "Intended Audience :: Developers",
-  "Operating System :: OS Independent",
-  "Programming Language :: Python",
-  "Programming Language :: Python :: 3.8",
-  "Programming Language :: Python :: 3.9",
-  "Programming Language :: Python :: 3.10",
-  "Programming Language :: Python :: 3.11",
-  "Programming Language :: Python :: 3.12",
-  "Programming Language :: Python :: 3.13",
-  "Programming Language :: Python :: 3 :: Only",
-  "Topic :: Software Development :: Libraries :: Python Modules",
+    "dgl>=2.2.0",
 ]
 
 [project.optional-dependencies]
@@ -107,6 +106,9 @@ test = [
   "pytest-xdist",
   "pre-commit"
 ]
+
+[tool.uv]
+find-links = ["https://data.dgl.ai/wheels/torch-2.4/repo.html"]
 
 [tool.ruff]
 line-length = 119
