--- a/hopwise/properties/model/TransH.yaml
+++ b/hopwise/properties/model/TransH.yaml
@@ -1,2 +1,7 @@
 embedding_size: 64              # (int) The embedding size of users and items.
 margin: 1.0                     # (float) The margin used in the TripletMarginLoss
+epochs: 30
+eval_step: 30
+train_neg_sample_args:
+  distribution: 'uniform'
+  sample_num: 5
