--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,15 +37,16 @@ classifiers = [
   "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
-  "Programming Language :: Python :: 3.12",
-  "Programming Language :: Python :: 3.13",
   "Programming Language :: Python :: 3 :: Only",
   "Topic :: Software Development :: Libraries :: Python Modules",
 ]
 dependencies = [
-    "torch>=2.4.0",
-    "numpy==1.23.5",
-    "pandas>=1.3.0",
+    "torch>=2.4.0 ; platform_system != 'Windows'",
+    "torch~=2.2.1 ; platform_system == 'Windows'",
+    "numpy ; python_version != '3.12'",
+    "numpy>1.23.5 ; python_version == '3.12'",
+    "pandas< 2.0.0 ; python_version == '3.12'",
+    "pandas>=1.3.0, < 2.0.3 ; python_version < '3.12'",
     "transformers",  # it will be used by language path modeling
     "accelerate>=0.34.2",
     "tqdm",
@@ -61,7 +62,8 @@ dependencies = [
     "datasets",
     "colorlog>=4.7.2",
     "protobuf==3.19.0",
-    "dgl>=2.2.0",
+    "dgl>=2.2.0 ; platform_system != 'Windows'" ,
+    "dgl==2.2.1 ; platform_system == 'Windows'" ,
 ]
 
 [project.optional-dependencies]
@@ -109,8 +111,25 @@ test = [
   "pre-commit"
 ]
 
+[tool.tox]
+requires = ["tox-uv>=1"]
+env_list = ["3.12", "3.11", "3.10", "3.9", "3.8"]
+
+[tool.tox.env_run_base]
+description = "uv_sync run base"
+extras = ["all-extras", "dev"]
+commands = [
+  ["uv", "run", "--active", "run_hopwise.py", "--epochs=2"],
+  ["uv", "run", "--active", "run_hopwise.py", "--model", "KGAT", "--epochs=2"]
+]
+
 [tool.uv]
-find-links = ["https://data.dgl.ai/wheels/torch-2.4/repo.html"]
+find-links = [
+  "https://data.dgl.ai/wheels/torch-2.4/repo.html",
+  "https://data.dgl.ai/wheels/cu121/repo.html",
+  "https://data.dgl.ai/wheels/cu118/repo.html",
+  "https://data.dgl.ai/wheels/repo.html"
+]
 
 [tool.ruff]
 line-length = 119
