--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,23 @@
 [build-system]
-requires = ["setuptools"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
-[tool.setuptools.packages.find]
-include = ["hopwise"]
-namespaces = false
+[tool.hatch.build.targets.sdist]
+include = [
+  "/hopwise/properties",
+  "/tests",
+  "/run_example",
+  "/run_hyper.py",
+  "/significance_test.py",
+  "/run_hopwise.py",
+  "/run_hopwise_group.py"
+]
+
+[tool.hatch.build.targets.wheel]
+packages = ["hopwise"]
+
+[tool.hatch.version]
+path = "hopwise/__init__.py"
 
 [project]
 name = "hopwise"
@@ -42,16 +55,16 @@ classifiers = [
 ]
 dependencies = [
     "torch>=2.4.0 ; platform_system != 'Windows'",
-    "torch~=2.2.1 ; platform_system == 'Windows'",
+    "torch==2.4.* ; platform_system == 'Windows'",
     "numpy ; python_version != '3.12'",
     "numpy>1.23.5 ; python_version == '3.12'",
     "pandas< 2.0.0 ; python_version == '3.12'",
     "pandas>=1.3.0, < 2.0.3 ; python_version < '3.12'",
-    "transformers",  # it will be used by language path modeling
+    "transformers",
     "accelerate>=0.34.2",
     "tqdm",
     "wandb",
-    "igraph",  # it will be used for random walk path sampling
+    "igraph",
     "colorama>=0.4.4",
     "scipy>=1.12.0",
     "thop",
@@ -103,7 +116,7 @@ dev = [
 ]
 docs = [
   "sphinx",
-  "Furo",
+  "furo",
   "sphinx-copybutton"
 ]
 test = [
@@ -120,15 +133,14 @@ description = "uv_sync run base"
 extras = ["all-extras", "dev"]
 commands = [
   ["uv", "run", "--active", "run_hopwise.py", "--epochs=2"],
+  ["uv", "run", "--active", "run_hopwise.py", "--model", "LightGCN", "--epochs=2"],
   ["uv", "run", "--active", "run_hopwise.py", "--model", "KGAT", "--epochs=2"]
 ]
 
 [tool.uv]
 find-links = [
-  "https://data.dgl.ai/wheels/torch-2.4/repo.html",
-  "https://data.dgl.ai/wheels/cu121/repo.html",
-  "https://data.dgl.ai/wheels/cu118/repo.html",
-  "https://data.dgl.ai/wheels/repo.html"
+  "https://data.dgl.ai/wheels/repo.html",
+  "https://data.dgl.ai/wheels/torch-2.4/repo.html"
 ]
 
 [tool.ruff]
@@ -174,3 +186,7 @@ line-ending = "auto"
 
 [tool.ruff.lint.pydocstyle]
 convention = "google"
+
+[project.scripts]
+hopwise = "run_hopwise.py"
+hopwise_group = "run_hopwise_group.py"
