--- a/.github/workflows/uv_sync.yml
+++ b/.github/workflows/uv_sync.yml
@@ -13,13 +13,24 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        os: [ubuntu-latest]
         python-version: ["3.9", "3.10", "3.11", "3.12"]
         experimental: [false]
         include:
           - python-version: "3.12"
+            os: ubuntu-latest
             experimental: true
           - os: windows-latest
+            python-version: "3.9"
+            experimental: true
+          - os: windows-latest
+            python-version: "3.10"
+            experimental: true
+          - os: windows-latest
+            python-version: "3.11"
+            experimental: true
+          - os: windows-latest
+            python-version: "3.12"
             experimental: true
 
     steps:
