Pyproject trying removing sys markers for DGL

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,8 +82,7 @@ dependencies = [
     "datasets",
     "colorlog>=4.7.2",
     "protobuf==3.19.0",
-    "dgl>=2.4.0 ; sys_platform != 'win32'" ,
-    "dgl==2.2.1 ; sys_platform == 'win32'" ,
+    "dgl>=2.2.1",
 ]
 
 [project.optional-dependencies]
