--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,11 +62,11 @@ classifiers = [
   "Topic :: Software Development :: Libraries :: Python Modules",
 ]
 dependencies = [
-    "torch>=2.4.0 ; sys_platform != 'win32'",
-    "torch==2.4.* ; sys_platform == 'win32'",
-    "numpy<=1.24.4",
-    "pandas< 2.0.0 ; python_version == '3.12'",
-    "pandas>=1.3.0, < 2.0.3 ; python_version < '3.12'",
+    "torch==2.3.*",
+    "numpy<=1.24.4 ; python_version < '3.12'",
+    "numpy>=2.0.0 ; python_version == '3.12'",
+    "pandas>=1.3.0, <2.0.3 ; python_version < '3.12'",
+    "pandas>2.0.0 ; python_version == '3.12'",
     "transformers",
     "accelerate>=0.34.2",
     "tqdm",
