--- a/.github/workflows/uv_sync_cu118.yml
+++ b/.github/workflows/uv_sync_cu118.yml
@@ -42,7 +42,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Install the project
-        run: uv sync --all-extras --dev
+        run: uv sync --extra cu118 --extra all_models --extra hyper --dev --group test
 
       - name: Run Hopwise
         run: |
