--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,7 +62,6 @@ classifiers = [
   "Topic :: Software Development :: Libraries :: Python Modules",
 ]
 dependencies = [
-    "torch==2.3.*",
     "numpy<=1.24.4 ; python_version < '3.12'",
     "numpy>=2.0.0 ; python_version == '3.12'",
     "pandas>=1.3.0, <2.0.3 ; python_version < '3.12'",
@@ -82,10 +81,25 @@ dependencies = [
     "datasets",
     "colorlog>=4.7.2",
     "protobuf==3.19.0",
-    "dgl==2.2.*",
 ]
 
 [project.optional-dependencies]
+cpu = [
+  "torch==2.3.*",
+  "dgl",
+]
+cu118 = [
+  "torch==2.3.*",
+  "dgl",
+]
+cu121 = [
+  "torch==2.3.*",
+  "dgl",
+]
+cu124 = [
+  "torch==2.3.*",
+  "dgl==2.4.*",
+]
 nncf = [
   "community",
   "python-louvain"
@@ -107,15 +121,17 @@ hyper = [
   "optuna",
   "ray[tune]"
 ]
-
-[dependency-groups]
-dev = [
+all_models = [
   "hopwise[nncf]",
   "hopwise[xgboost]",
   "hopwise[ncl]",
   "hopwise[lightgbm]",
   "hopwise[ldiffrec]",
-  "hopwise[hyper]",
+]
+
+[dependency-groups]
+dev = [
+  "hopwise[all_models]",
   "plotly",
   "opentsne",
   "nbformat"
@@ -144,13 +160,62 @@ commands = [
 ]
 
 [tool.uv]
+default-groups = ["cu121"]
 find-links = [
-  "https://data.dgl.ai/wheels/cu121/repo.html",
-  "https://data.dgl.ai/wheels/cu118/repo.html",
-  "https://data.dgl.ai/wheels/repo.html",
+  "https://data.dgl.ai/wheels/torch-2.4/cu124/repo.html",
   "https://data.dgl.ai/wheels/torch-2.3/cu121/repo.html",
   "https://data.dgl.ai/wheels/torch-2.3/repo.html",
 ]
+conflicts = [
+  [
+    { extra = "cpu" },
+    { extra = "cu118" },
+    { extra = "cu121" },
+    { extra = "cu124" },
+  ],
+]
+
+[tool.uv.sources]
+torch = [
+  { index = "pytorch-cpu", extra = "cpu" },
+  { index = "pytorch-cu118", extra = "cu118" },
+  { index = "pytorch-cu121", extra = "cu121" },
+  { index = "pytorch-cu124", extra = "cu124" },
+]
+dgl = [
+  { url = "https://data.dgl.ai/wheels/dgl-2.2.1-cp39-cp39-win_amd64.whl", extra = "cpu", marker = "sys_platform == 'win32' and python_version == '3.9'" },
+  { url = "https://data.dgl.ai/wheels/dgl-2.2.1-cp310-cp310-win_amd64.whl", extra = "cpu", marker = "sys_platform == 'win32' and python_version == '3.10'" },
+  { url = "https://data.dgl.ai/wheels/dgl-2.2.1-cp311-cp311-win_amd64.whl", extra = "cpu", marker = "sys_platform == 'win32' and python_version == '3.11'" },
+  { url = "https://data.dgl.ai/wheels/dgl-2.2.1-cp312-cp312-win_amd64.whl", extra = "cpu", marker = "sys_platform == 'win32' and python_version == '3.12'" },
+  { url = "https://data.dgl.ai/wheels/cu118/dgl-2.2.1%2Bcu118-cp39-cp39-win_amd64.whl", extra = "cu118", marker = "sys_platform == 'win32' and python_version == '3.9'" },
+  { url = "https://data.dgl.ai/wheels/cu118/dgl-2.2.1%2Bcu118-cp310-cp310-win_amd64.whl", extra = "cu118", marker = "sys_platform == 'win32' and python_version == '3.10'" },
+  { url = "https://data.dgl.ai/wheels/cu118/dgl-2.2.1%2Bcu118-cp311-cp311-win_amd64.whl", extra = "cu118", marker = "sys_platform == 'win32' and python_version == '3.11'" },
+  { url = "https://data.dgl.ai/wheels/cu118/dgl-2.2.1%2Bcu118-cp312-cp312-win_amd64.whl", extra = "cu118", marker = "sys_platform == 'win32' and python_version == '3.12'" },
+  { url = "https://data.dgl.ai/wheels/cu121/dgl-2.2.1%2Bcu121-cp39-cp39-win_amd64.whl", extra = "cu121", marker = "sys_platform == 'win32' and python_version == '3.9'" },
+  { url = "https://data.dgl.ai/wheels/cu121/dgl-2.2.1%2Bcu121-cp310-cp310-win_amd64.whl", extra = "cu121", marker = "sys_platform == 'win32' and python_version == '3.10'" },
+  { url = "https://data.dgl.ai/wheels/cu121/dgl-2.2.1%2Bcu121-cp311-cp311-win_amd64.whl", extra = "cu121", marker = "sys_platform == 'win32' and python_version == '3.11'" },
+  { url = "https://data.dgl.ai/wheels/cu121/dgl-2.2.1%2Bcu121-cp312-cp312-win_amd64.whl", extra = "cu121", marker = "sys_platform == 'win32' and python_version == '3.12'" },
+]
+
+[[tool.uv.index]]
+name = "pytorch-cpu"
+url = "https://download.pytorch.org/whl/cpu"
+explicit = true
+
+[[tool.uv.index]]
+name = "pytorch-cu118"
+url = "https://download.pytorch.org/whl/cu118"
+explicit = true
+
+[[tool.uv.index]]
+name = "pytorch-cu121"
+url = "https://download.pytorch.org/whl/cu121"
+explicit = true
+
+[[tool.uv.index]]
+name = "pytorch-cu124"
+url = "https://download.pytorch.org/whl/cu124"
+explicit = true
 
 [tool.ruff]
 line-length = 119
