--- a/.github/workflows/uv_sync_cu118.yml
+++ b/.github/workflows/uv_sync_cu118.yml
@@ -1,7 +1,7 @@
-name: Check UV Sync and Run
+name: Check UV Sync and Run on CUDA 11.8
 
 on: [
-  # push,
+  push,
   pull_request,
   workflow_dispatch
 ]
