--- a/.github/workflows/uv_sync_cu121.yml
+++ b/.github/workflows/uv_sync_cu121.yml
@@ -42,7 +42,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Install the project
-        run: uv sync --extra cu121 --extra all_models --extra hyper --group test --no-dev
+        run: uv sync --extra cu121 --extra all-models --extra hyper --extra lint --group test --no-dev
 
       - name: Run Hopwise
         run: |
