--- a/.github/workflows/uv_sync_cpu.yml
+++ b/.github/workflows/uv_sync_cpu.yml
@@ -42,7 +42,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Install the project
-        run: uv sync --extra cpu --extra all-models --extra hyper --extra lint --group test --no-dev
+        run: uv sync --extra cpu --extra all-models --extra hyper --group lint --group test --no-dev
 
       - name: Run Hopwise
         run: |
