--- a/.github/workflows/uv_sync_cu124.yml
+++ b/.github/workflows/uv_sync_cu124.yml
@@ -30,7 +30,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Install the project
-        run: uv sync --extra cu124 --extra all-models --extra hyper --extra lint --group test --no-dev
+        run: uv sync --extra cu124 --extra all-models --extra hyper --group lint --group test --no-dev
 
       - name: Run Hopwise
         run: |
