--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,7 @@ classifiers = [
   "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
   "Programming Language :: Python :: 3 :: Only",
   "Topic :: Software Development :: Libraries :: Python Modules",
 ]
@@ -85,8 +86,7 @@ dependencies = [
 
 [project.optional-dependencies]
 cpu = [
-  # "torch==2.2.1 ; sys_platform == 'win32'",
-  # "torch==2.4.* ; sys_platform == 'linux'",
+  "torch==2.4.0 ; sys_platform == 'win32'",
   "dgl",
 ]
 cu118 = [
