--- a/.github/workflows/uv_sync_cpu.yml
+++ b/.github/workflows/uv_sync_cpu.yml
@@ -44,6 +44,22 @@ jobs:
       - name: Install the project
         run: uv sync --extra cpu --extra all-models --extra hyper --group lint --group test --no-dev
 
+      - name: Run Python version-specific step
+        if: matrix.python-version == '3.9'
+        run: uv pip install https://data.dgl.ai/wheels/dgl-2.2.1-cp39-cp39-win_amd64.whl
+
+      - name: Run Python version-specific step
+        if: matrix.python-version == '3.10'
+        run: uv pip install https://data.dgl.ai/wheels/dgl-2.2.1-cp310-cp310-win_amd64.whl
+
+      - name: Run Python version-specific step
+        if: matrix.python-version == '3.11'
+        run: uv pip install https://data.dgl.ai/wheels/dgl-2.2.1-cp311-cp311-win_amd64.whl
+
+      - name: Run Python version-specific step
+        if: matrix.python-version == '3.12'
+        run: uv pip install https://data.dgl.ai/wheels/dgl-2.2.1-cp312-cp312-win_amd64.whl
+
       - name: Run Hopwise
         run: |
           # General working example
