--- a/hopwise/properties/quick_start_config/knowledge_path_base.yaml
+++ b/hopwise/properties/quick_start_config/knowledge_path_base.yaml
@@ -23,6 +23,7 @@ path_sample_args:
     MAX_CONSECUTIVE_INVALID: 10 # (int) Maximum number of consecutive invalid paths per user.
     MAX_RW_TRIES_PER_IID: 50    # (int) Maximum number of tries per positive item.
     MAX_RW_PATHS_PER_HOP: 1     # (int) Maximum number of paths sampled at each hop for constrained random walk.
+    parallel_max_workers: -1    # (int) Maximum number of workers for parallel processing.
 tokenizer:                                  # (dict) Tokenizer parameters.
     model: WordLevel                        # (str) Tokenizer model.
     template: "{bos_token}:0 $A:0 {eos_token}"                # (str) Template for the tokenizer.
