--- a/hopwise/properties/dataset/sample.yaml
+++ b/hopwise/properties/dataset/sample.yaml
@@ -63,11 +63,12 @@ path_sample_args:
     temporal_causality: False   # (bool) Whether to use temporal causality.
     collaborative_path: True    # (bool) Whether to include users in sampled paths.
     strategy: constrained-rw    # (str) Strategy for sampling paths.
-    reasoning_template: "{user} {pos_iid} {entity_list} {rec_iid}"  # (str) Template used to format reasoning pahts.
+    path_token_separator: " "   # (str) Token separator for paths.
     restrict_by_phase: True     # (bool) Whether to restrict the last item in the reasoning path by the used ids in the dataloader phase.
     MAX_CONSECUTIVE_INVALID: 10 # (int) Maximum number of consecutive invalid paths per user.
     MAX_RW_TRIES_PER_IID: 50    # (int) Maximum number of tries per positive item.
     MAX_RW_PATHS_PER_HOP: 1     # (int) Maximum number of paths sampled at each hop for constrained random walk.
+    parallel_max_workers: -1    # (int) Maximum number of workers for parallel processing.
 tokenizer:                      # (dict) Tokenizer parameters.
     model: WordLevel            # (str) Tokenizer model.
     special_tokens:             # (dict) Special tokens.
