--- a/hopwise/properties/quick_start_config/knowledge_path_base.yaml
+++ b/hopwise/properties/quick_start_config/knowledge_path_base.yaml
@@ -18,7 +18,7 @@ path_sample_args:
     temporal_causality: False   # (bool) Whether to use temporal causality.
     collaborative_path: True    # (bool) Whether to include users in sampled paths.
     strategy: constrained-rw    # (str) Strategy for sampling paths.
-    reasoning_template: "{user} {pos_iid} {entity_list} {rec_iid}"  # (str) Template used to format reasoning pahts.
+    path_token_separator: " "   # (str) Token separator for paths.
     restrict_by_phase: True     # (bool) Whether to restrict the last item in the reasoning path by the used ids in the dataloader phase.
     MAX_CONSECUTIVE_INVALID: 10 # (int) Maximum number of consecutive invalid paths per user.
     MAX_RW_TRIES_PER_IID: 50    # (int) Maximum number of tries per positive item.
