--- a/hopwise/properties/model/KGGLM.yaml
+++ b/hopwise/properties/model/KGGLM.yaml
@@ -2,12 +2,18 @@ learning_rate: 2e-4
 weight_decay: 0.01
 warmup_steps: 250               # (int) Number of warmup steps for learning rate scheduler.
 context_length: 24              # (int) Maximum length of the context.
+embedding_size: 768             # (int) Size of the embeddings.
+num_heads: 12                   # (int) Number of heads in the multi-head attention.
+num_layers: 6                   # (int) Number of layers in the transformer.
 save_step: 50                   # (int) Number of steps to save the model during pre-training.
 pretrain_epochs: 150            # (int) Number of epochs for pre-training.
 train_stage: 'lp_pretrain'      # (str) The training stage. Range in ['lp_pretrain', 'finetune'].
 pre_model_path: ''              # (str) The path of pretrained model.
+
 path_sample_args:
     restrict_by_phase: False    # (bool) Whether to restrict the last item in the reasoning path by the used ids in the dataloader phase.
+    pretrain_hop_length: (3,3)  # (tuple) The range of the hop length for pre-training.
+    pretrain_paths: 10000       # (int) Number of paths for pre-training.
 
 path_generation_args:
     paths_per_user: 30          # (int) Number of paths generated per user.
