--- a/tests/model/test_model.yaml
+++ b/tests/model/test_model.yaml
@@ -46,3 +46,28 @@ alias_of_relation_id: ~
 preload_weight: ~
 normalize_field: ~
 normalize_all: True
+
+path_hop_length: 3
+MAX_PATHS_PER_USER: 5
+context_length: 24
+metapaths: ~
+path_sample_args:
+    temporal_causality: False
+    collaborative_path: True
+    strategy: constrained-rw
+    path_token_separator: " "
+    restrict_by_phase: True
+    MAX_CONSECUTIVE_INVALID: 10
+    MAX_RW_TRIES_PER_IID: 50
+    MAX_RW_PATHS_PER_HOP: 1
+    parallel_max_workers: -1
+tokenizer:
+    model: WordLevel
+    special_tokens:
+        mask_token: "[MASK]"
+        unk_token: "[UNK]"
+        pad_token: "[PAD]"
+        eos_token: "[EOS]"
+        bos_token: "[BOS]"
+        sep_token: "[SEP]"
+        cls_token: "[CLS]"
